--- a/oshi-core/pom.xml
+++ b/oshi-core/pom.xml
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna-platform</artifactId>
-			<version>4.2.2</version>
+			<version>4.3.0-seven10</version>
 		</dependency>
 	</dependencies>
 </project>
