--- a/oshi-core/pom.xml
+++ b/oshi-core/pom.xml
@@ -21,6 +21,11 @@
 	</scm>
 
 	<dependencies>
+	<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>4.3.0-seven10</version>
+		</dependency>
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna-platform</artifactId>
