--- a/oshi-json/pom.xml
+++ b/oshi-json/pom.xml
@@ -22,6 +22,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>4.3.0-seven10</version>
+		</dependency>
+		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>oshi-core</artifactId>
 			<version>${project.version}</version>
