--- a/oshi-core/pom.xml
+++ b/oshi-core/pom.xml
@@ -24,12 +24,12 @@
 	<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna</artifactId>
-			<version>4.3.0-seven10</version>
+			<version>4.3.0-seven10-1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna-platform</artifactId>
-			<version>4.3.0-seven10</version>
+			<version>4.3.0-seven10-1</version>
 		</dependency>
 	</dependencies>
 </project>
